--- a/_posts/2024-01-15-Markdown.md
+++ b/_posts/2024-01-15-Markdown.md
@@ -1,6 +1,6 @@
 ---
-title:  "[gunchukzae] 마크다운(Markdown) 문법 정리"
-excerpt: "md 파일에 마크다운 문법으로 작성하여 Github 원격 저장소에 업로드 해보자. 에디터는 Visual Studio code 사용! 로컬 서버에서 확인도 해보자. "
+title:  "[gunchukzae] 마크다운(Markdown) 문법정리"
+excerpt: "마크다운 문법정리"
 
 categories:
   - Blog
@@ -17,7 +17,8 @@ last_modified_at: 2024-01-15
 
 # 마크다운 문법정리
 
-## 1. 제목
+1.제목
+=============
 ### 1.1. 헤더
 
 ```
@@ -25,7 +26,7 @@ last_modified_at: 2024-01-15
 =============
 ```
 
-- 헤더 적용예시
+<적용예시>
 
 헤더
 =============
@@ -37,7 +38,7 @@ last_modified_at: 2024-01-15
 -------------
 ```
 
-- 작은제목 적용예시
+<적용예시>
 
 작은제목
 -------------
@@ -45,6 +46,8 @@ last_modified_at: 2024-01-15
 ### 1.3. 글머리
 
 ```
+1~6 까지만 지원한다.
+
 # 글머리1
 ## 글머리2
 ### 글머리3
@@ -53,7 +56,7 @@ last_modified_at: 2024-01-15
 ###### 글머리6
 ```
 
-- 글머리 적용예시 (1~6까지만 지원)
+<적용예시>
 
 # 글머리1
 ## 글머리2
@@ -62,7 +65,8 @@ last_modified_at: 2024-01-15
 ##### 글머리5
 ###### 글머리6
 
-## 2. 인용
+2.인용
+=============
 ### 2.1. 블럭인용문자
 
 ```
@@ -71,7 +75,7 @@ last_modified_at: 2024-01-15
 >	>	> 세번째 블럭인용
 ```
 
-- 블럭인용문자 적용예시
+<적용예시>
 
 > 첫번째 블럭인용
 >	> 두번째 블럭인용
@@ -83,28 +87,28 @@ last_modified_at: 2024-01-15
 각주<sup>[1](#각주 이름)</sup>
 
 <a name="각주 이름">1</a>: 각주에 대한 설명
-
 ```
 
-- 적용예시
+<적용예시>
 
 각주<sup>[1](#각주 이름)</sup>
 
 <a name="각주 이름">1</a>: 각주에 대한 설명
 
 
-## 3. 목록
-
+3.목록
+=============
 ### 3.1. 순서있는 목록(번호)
 
 ```
+순서는 무조건 번호의 내림차순으로만 작성 가능하다.
+
 1. 첫번째
 2. 세번째
 3. 두번째
 ```
 
-- 순서는 무조건 번호의 내림차순으로만 작성 가능함.
-
+<적용예시>
 1. 첫번째
 2. 세번째
 3. 두번째
@@ -113,6 +117,8 @@ last_modified_at: 2024-01-15
 ### 3.2. 순서없는 목록(글머리 기호:*,+,- 지원)
 
 ```
+혼합해서 사용 가능하다.
+
 * 빨강
     * 녹색
         * 파랑
@@ -125,8 +131,6 @@ last_modified_at: 2024-01-15
     - 녹색
         - 파랑
 ```
-
-- 혼합해서 사용 가능함.
 
 * 빨강
   * 녹색
@@ -141,14 +145,15 @@ last_modified_at: 2024-01-15
     - 파랑
 
 
-## 4. 코드 작성
+4.코드 작성
+=============
 ### 4.1. 들여쓰기
 4개의 공백 또는 하나의 탭으로 들여쓰기를 만나면 변환되기 시작하여 들여쓰지 않은 행을 만날때까지 변환이 계속된다.
 
 ### 4.2. 코드블럭
-아래 2가지 방식으로 사용 가능함.
+코드를 삽입할 땐, 아래 2가지 방식으로 삽입 가능하다.
 
-- ```<pre><code>{code}</code></pre>``` 이용방식
+- ```<pre><code>{code}</code></pre>``` 활용
 
 ```
 <pre>
@@ -163,7 +168,7 @@ public class BootSpringBootApplication {
 </pre>
 ```
 
-- 코드블럭코드( ``` ) 이용방식
+- 코드블럭코드( ``` ) 활용
 
 <pre>
 <code>
@@ -177,7 +182,7 @@ public class BootSpringBootApplication {
 </code>
 </pre>
 
-깃헙에서는 코드블럭코드(```) 시작점에 사용하는 언어를 선언하여 문법강조(Syntax highlighting)이 가능함.
+깃헙에서는 코드블럭코드(```) 시작점에 사용하는 언어를 선언하여 문법강조(Syntax highlighting)이 가능하다.
 
 <pre>
 <code>
@@ -189,7 +194,7 @@ int main(){
 </code>
 </pre>
 
-아래처럼 C++ 문법이 강조됨
+아래처럼 C++ 문법이 강조된다.
 ```C++
 int main(){
     cout << "Hello World!";
@@ -197,7 +202,7 @@ int main(){
 ```
 
 ### 4.3. 수평선 ```<hr/>```
-아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력 시, 페이지 나누기 용도로 많이 활용됨.
+아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력 시, 페이지 나누기 용도로 많이 활용된다.
 
 ```
 * * *
@@ -225,6 +230,7 @@ int main(){
 ---------------------------------------
 
 ### 4.4. 링크
+링크는 참조링크, 외부링크, 자동연결 3가지 방식이 있다.
 
 - 참조링크
 
@@ -235,7 +241,7 @@ Link: [Google][googlelink]
 
 ```
 
-- 적용예시  
+<적용예시>  
 Link: [Google][googlelink]
 
 [googlelink]: https://google.com "Go google"
@@ -246,7 +252,7 @@ Link: [Google][googlelink]
 [Google](https://google.com, "google link")
 ```
 
-- 적용예시
+<적용예시>
 
 [Google](https://google.com, "google link")
 
@@ -258,9 +264,9 @@ Link: [Google][googlelink]
 * 이메일링크: <address@example.com>
 ```
 
-- 적용예시
+<적용예시>
 
-외부링크: <http://example.com/>
+외부링크: <http://example.com/>  
 이메일링크: <address@example.com>
 
 
@@ -275,7 +281,7 @@ __double underscores__
 _Italic_
 ```
 
-- 적용예시  
+<적용예시>
 
 - *single asterisks*
 - _single underscores_
@@ -290,28 +296,28 @@ _Italic_
 ### 4.6. 이미지
 
 ```
-![Alt text](/path/to/img.jpg)
-![Alt text](/path/to/img.jpg "Optional title")
+![Alt text](주소)
+![Alt text](주소 "Optional title")
 ```
 
-- 적용예시
+<적용예시>
 
-![Alt text](./img.jpg)
+![img](https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1 "laura adai Image")
 
 - 사이즈 조절
 
 ```
-<img src="./img.jpg" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
-<img src="./img.jpg" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
+<img src="주소" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
+<img src="주소" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
 ```
 
-- 적용예시
+<적용예시>
 
-<img src="./img.jpg" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="lauraadai"></img><br/>
-<img src="./img.jpg" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="lauraadai"></img>
+<img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="350px" height="250px" title="px(픽셀) 크기 설정" alt="lauraadai"></img><br/>
+<img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="40%" height="30%" title="px(픽셀) 비율 설정" alt="lauraadai"></img>
 
 ### 4.7. 줄바꿈
-엔터키(\n)만으로는 줄바꿈이 되지 않으므로, 문장 마지막에서 2칸 띄어쓰기 후 엔터키를 눌러야함.
+엔터키(\n)만으로는 줄바꿈이 되지 않으므로, 문장 마지막에서 2칸 띄어쓰기 후 엔터키를 눌러야 한다.
 
 ```
 줄바꿈\n (엔터)
@@ -319,7 +325,7 @@ _Italic_
 줄바꿈
 ```
 
-- 적용예시
+<적용예시>
 
 줄바꿈
 줄바꿈  
@@ -327,7 +333,7 @@ _Italic_
 
 ### 4.8. 표
 #### 4.8.1. 일반적인 표
-- 테이블 안에 ```|``` 파이프 기호를 사용하려면 파이프 기호 대신에 ```&#124;```를 입력
+테이블 안에 ```|``` 파이프 기호를 사용하려면, 파이프 기호 대신에 ```&#124;```를 입력한다.
 
 ```
 |제목|&#124;내용&#124;|설명|
@@ -337,7 +343,7 @@ _Italic_
 |테스트1|테스트2|테스트3|
 ```
 
-- 적용예시
+<적용예시>
 
 |제목|&#124;내용&#124;|설명|
 |------|---|---|
@@ -346,7 +352,7 @@ _Italic_
 |테스트1|테스트2|테스트3|
 
 #### 4.8.2. 셀 정렬
-- ```:``` 문자로 정렬을 정의
+```:``` 문자로 정렬을 정의한다.
 
 ```
 |제목|내용|설명|
@@ -356,7 +362,7 @@ _Italic_
 |왼쪽정렬|오른쪽정렬|중앙정렬|
 ```
 
-- 적용예시
+<적용예시>
 
 |제목|내용|설명|
 |:---|---:|:---:|
@@ -365,7 +371,7 @@ _Italic_
 |왼쪽정렬|오른쪽정렬|중앙정렬|
 
 #### 4.8.3. 셀 확장
-- 사이가 비어있으면 자동으로 확장
+사이가 비어있으면 자동으로 확장된다.
 
 ```
 |제목|내용|설명|
@@ -375,7 +381,7 @@ _Italic_
 |왼쪽에서확장||
 ```
 
-- 적용예시
+<적용예시>
 
 |제목|내용|설명|
 |:---|:---:|---:|
@@ -384,7 +390,7 @@ _Italic_
 |왼쪽에서확장||
 
 #### 4.8.4. 셀 강조
-- 일반적인 text와 마찬가지로 ```*``` 와 ```**``` 를 통해 이탤릭/강조를 표시할 수 있습니다. ```span tag를``` 사용하면 컬러도 표시 가능
+일반적인 text와 마찬가지로 ```*``` 와 ```**``` 를 통해 이탤릭/강조를 표시할 수 있다. ```span tag를``` 사용하면 컬러도 표시 가능하다.
 
 ```
 |제목|내용|설명|
@@ -394,7 +400,7 @@ _Italic_
 |테스트1|<span style="color:red">강조3</span>|테스트3|
 ```
 
-- 적용예시
+<적용예시>
 
 |제목|내용|설명|
 |---|---|---|
@@ -409,7 +415,7 @@ Good!!
 </details>
 ```
 
-- 적용예시
+<적용예시>
 
 <details><summary>Click Me</summary>
 Good!!
