--- a/_posts/2024-01-15-Markdown.md
+++ b/_posts/2024-01-15-Markdown.md
@@ -1,6 +1,6 @@
 ---
 title:  "[gunchukzae] 마크다운(Markdown) 문법정리"
-excerpt: "마크다운 문법을 전부 정리해 보자!!!!!!!!!"
+excerpt: "마크다운 문법을 전부 정리해 보자"
 
 categories:
   - Blog
@@ -16,7 +16,8 @@ last_modified_at: 2024-01-15
 
 
 # 마크다운 문법 정리
-## d
+## 제목/인용/목록/코드작성
+
 1.제목
 =============
 
