--- a/_posts/2024-01-15-Markdown.md
+++ b/_posts/2024-01-15-Markdown.md
@@ -295,7 +295,28 @@ _Italic_
 ```> 문장 중간에 사용할 경우, **띄어쓰기**를 사용하는 것이 좋다.```
 > 문장 중간에 사용할 경우, **띄어쓰기**를 사용하는 것이 좋다.
 
+### 4.6. 이미지
 
+```
+![Alt text](주소)
+![Alt text](주소 "Optional title")
+```
+
+<적용예시>
+
+![img](https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1 "laura adai Image")
+
+- 사이즈 조절
+
+```
+<img src="주소" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
+<img src="주소" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
+```
+
+<적용예시>
+
+<img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="350px" height="250px" title="px(픽셀) 크기 설정" alt="lauraadai"></img><br/>
+<img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="40%" height="30%" title="px(픽셀) 비율 설정" alt="lauraadai"></img>
 
 ### 4.7. 줄바꿈
 엔터키(\n)만으로는 줄바꿈이 되지 않으므로, 문장 마지막에서 2칸 띄어쓰기 후 엔터키를 눌러야 한다.
