--- a/_posts/2024-01-15-Markdown.md
+++ b/_posts/2024-01-15-Markdown.md
@@ -1,6 +1,6 @@
 ---
 title:  "[gunchukzae] 마크다운(Markdown) 문법정리"
-excerpt: "마크다운 문법을 전부 정리해 보자2"
+excerpt: "마크다운 문법을 전부 정리해 보자"
 
 categories:
   - Blog
@@ -16,12 +16,11 @@ last_modified_at: 2024-01-15
 
 
 # 마크다운 문법 정리
-## 제목/인용/목록/코드작성
 
-1.제목
+제목
 =============
 
-### 1.1. 헤더
+## 1.1. 헤더
 
 ```
 헤더
@@ -33,7 +32,7 @@ last_modified_at: 2024-01-15
 헤더
 =============
 
-### 1.2. 작은제목
+## 1.2. 작은제목
 
 ```
 작은제목
@@ -45,7 +44,7 @@ last_modified_at: 2024-01-15
 작은제목
 -------------
 
-### 1.3. 글머리
+## 1.3. 글머리
 
 ```
 1~6 까지만 지원한다.
@@ -58,18 +57,9 @@ last_modified_at: 2024-01-15
 ###### 글머리6
 ```
 
-<적용예시>
-
-# 글머리1
-## 글머리2
-### 글머리3
-#### 글머리4
-##### 글머리5
-###### 글머리6
-
 2.인용
 =============
-### 2.1. 블럭인용문자
+## 2.1. 블럭인용문자
 
 ```
 > 첫번째 블럭인용
@@ -83,7 +73,7 @@ last_modified_at: 2024-01-15
 >	> 두번째 블럭인용
 >	>	> 세번째 블럭인용
 
-### 2.2. 각주
+## 2.2. 각주
 
 ```
 각주<sup>[1](#각주 이름)</sup>
@@ -100,7 +90,7 @@ last_modified_at: 2024-01-15
 
 3.목록
 =============
-### 3.1. 순서있는 목록(번호)
+## 3.1. 순서있는 목록(번호)
 
 ```
 순서는 무조건 번호의 내림차순으로만 작성 가능하다.
@@ -116,7 +106,7 @@ last_modified_at: 2024-01-15
 3. 두번째
 
 
-### 3.2. 순서없는 목록(글머리 기호:*,+,- 지원)
+## 3.2. 순서없는 목록(글머리 기호:*,+,- 지원)
 
 ```
 혼합해서 사용 가능하다.
@@ -149,10 +139,10 @@ last_modified_at: 2024-01-15
 
 4.코드 작성
 =============
-### 4.1. 들여쓰기
+## 4.1. 들여쓰기
 4개의 공백 또는 하나의 탭으로 들여쓰기를 만나면 변환되기 시작하여 들여쓰지 않은 행을 만날때까지 변환이 계속된다.
 
-### 4.2. 코드블럭
+## 4.2. 코드블럭
 코드를 삽입할 땐, 아래 2가지 방식으로 삽입 가능하다.
 
 - ```<pre><code>{code}</code></pre>``` 활용
@@ -203,7 +193,7 @@ int main(){
 }
 ```
 
-### 4.3. 수평선 ```<hr/>```
+## 4.3. 수평선 ```<hr/>```
 아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력 시, 페이지 나누기 용도로 많이 활용된다.
 
 ```
@@ -231,7 +221,7 @@ int main(){
 
 ---------------------------------------
 
-### 4.4. 링크
+## 4.4. 링크
 링크는 참조링크, 외부링크, 자동연결 3가지 방식이 있다.
 
 - 참조링크
@@ -272,7 +262,7 @@ Link: [Google][googlelink]
 이메일링크: <address@example.com>
 
 
-### 4.5. 강조
+## 4.5. 강조
 
 ```
 *single asterisks*
@@ -295,7 +285,7 @@ _Italic_
 ```> 문장 중간에 사용할 경우, **띄어쓰기**를 사용하는 것이 좋다.```
 > 문장 중간에 사용할 경우, **띄어쓰기**를 사용하는 것이 좋다.
 
-### 4.6. 이미지
+## 4.6. 이미지
 
 ```
 ![Alt text](주소)
@@ -318,7 +308,7 @@ _Italic_
 <img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="350px" height="250px" title="px(픽셀) 크기 설정" alt="lauraadai"></img><br/>
 <img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="40%" height="30%" title="px(픽셀) 비율 설정" alt="lauraadai"></img>
 
-### 4.7. 줄바꿈
+## 4.7. 줄바꿈
 엔터키(\n)만으로는 줄바꿈이 되지 않으므로, 문장 마지막에서 2칸 띄어쓰기 후 엔터키를 눌러야 한다.
 
 ```
@@ -333,8 +323,8 @@ _Italic_
 줄바꿈  
 줄바꿈
 
-### 4.8. 표
-#### 4.8.1. 일반적인 표
+## 4.8. 표
+### 4.8.1. 일반적인 표
 테이블 안에 ```|``` 파이프 기호를 사용하려면, 파이프 기호 대신에 ```&#124;```를 입력한다.
 
 ```
@@ -353,7 +343,7 @@ _Italic_
 |테스트1|테스트2|테스트3|
 |테스트1|테스트2|테스트3|
 
-#### 4.8.2. 셀 정렬
+### 4.8.2. 셀 정렬
 ```:``` 문자로 정렬을 정의한다.
 
 ```
@@ -372,7 +362,7 @@ _Italic_
 |왼쪽정렬|오른쪽정렬|중앙정렬|
 |왼쪽정렬|오른쪽정렬|중앙정렬|
 
-#### 4.8.3. 셀 확장
+### 4.8.3. 셀 확장
 사이가 비어있으면 자동으로 확장된다.
 
 ```
@@ -391,7 +381,7 @@ _Italic_
 |||오른쪽에서 확장|
 |왼쪽에서확장||
 
-#### 4.8.4. 셀 강조
+### 4.8.4. 셀 강조
 일반적인 text와 마찬가지로 ```*``` 와 ```**``` 를 통해 이탤릭/강조를 표시할 수 있다. ```span tag를``` 사용하면 컬러도 표시 가능하다.
 
 ```
@@ -410,7 +400,7 @@ _Italic_
 |테스트1|**강조2**|테스트3|
 |테스트1|<span style="color:red">강조3</span>|테스트3|
 
-### 4.9. 접기
+## 4.9. 접기
 ```
 <details><summary>Click Me</summary>
 Good!!
