--- a/_posts/2024-01-15-Markdown - 복사본.md
+++ b/_posts/2024-01-15-Markdown - 복사본.md
@@ -1,3 +1,19 @@
+---
+title:  "[gunchukzae] 마크다운(Markdown) 문법정리"
+excerpt: "마크다운 문법을 전부 정리해 보자"
+
+categories:
+  - Blog
+tags:
+  - [Blog, jekyll, Github, Git]
+
+toc: true
+toc_sticky: true
+ 
+date: 2024-01-15
+last_modified_at: 2024-01-15
+---
+
 # 마크다운 문법정리
 
 ## 1. 제목
