--- a/_posts/2024-01-15-Markdown.md
+++ b/_posts/2024-01-15-Markdown.md
@@ -27,6 +27,7 @@ last_modified_at: 2024-01-15
 =============
 ```
 
+- 적용예시
 
 헤더
 =============
@@ -38,6 +39,7 @@ last_modified_at: 2024-01-15
 -------------
 ```
 
+- 적용예시
 
 작은제목
 -------------
@@ -66,6 +68,8 @@ last_modified_at: 2024-01-15
 >	>	> 세번째 블럭인용
 ```
 
+- 적용예시
+
 > 첫번째 블럭인용
 >	> 두번째 블럭인용
 >	>	> 세번째 블럭인용
@@ -78,6 +82,7 @@ last_modified_at: 2024-01-15
 <a name="각주 이름">1</a>: 각주에 대한 설명
 ```
 
+- 적용예시
 
 각주<sup>[1](#각주 이름)</sup>
 
@@ -95,6 +100,8 @@ last_modified_at: 2024-01-15
 2. 세번째
 3. 두번째
 ```
+
+- 적용예시
 
 1. 첫번째
 2. 세번째
@@ -119,6 +126,8 @@ last_modified_at: 2024-01-15
         - 파랑
 ```
 
+- 적용예시
+
 * 빨강
   * 녹색
     * 파랑
@@ -134,6 +143,7 @@ last_modified_at: 2024-01-15
 
 4.코드 작성
 =============
+
 ## 4.1. 들여쓰기
 4개의 공백 또는 하나의 탭으로 들여쓰기를 만나면 변환되기 시작하여 들여쓰지 않은 행을 만날때까지 변환이 계속된다.
 
@@ -228,7 +238,7 @@ Link: [Google][googlelink]
 
 ```
 
-<적용예시>  
+- 적용예시  
 Link: [Google][googlelink]
 
 [googlelink]: https://google.com "Go google"
@@ -239,7 +249,7 @@ Link: [Google][googlelink]
 [Google](https://google.com, "google link")
 ```
 
-<적용예시>
+- 적용예시
 
 [Google](https://google.com, "google link")
 
@@ -251,7 +261,7 @@ Link: [Google][googlelink]
 * 이메일링크: <address@example.com>
 ```
 
-<적용예시>
+- 적용예시
 
 외부링크: <http://example.com/>  
 이메일링크: <address@example.com>
@@ -268,7 +278,7 @@ __double underscores__
 _Italic_
 ```
 
-<적용예시>
+- 적용예시
 
 - *single asterisks*
 - _single underscores_
@@ -287,7 +297,7 @@ _Italic_
 ![Alt text](주소 "Optional title")
 ```
 
-<적용예시>
+- 적용예시
 
 ![img](https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1 "laura adai Image")
 
@@ -298,7 +308,7 @@ _Italic_
 <img src="주소" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
 ```
 
-<적용예시>
+- 적용예시
 
 <img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="350px" height="250px" title="px(픽셀) 크기 설정" alt="lauraadai"></img><br/>
 <img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="40%" height="30%" title="px(픽셀) 비율 설정" alt="lauraadai"></img>
@@ -312,7 +322,7 @@ _Italic_
 줄바꿈
 ```
 
-<적용예시>
+- 적용예시
 
 줄바꿈
 줄바꿈  
@@ -330,7 +340,7 @@ _Italic_
 |테스트1|테스트2|테스트3|
 ```
 
-<적용예시>
+- 적용예시
 
 |제목|&#124;내용&#124;|설명|
 |------|---|---|
@@ -349,7 +359,7 @@ _Italic_
 |왼쪽정렬|오른쪽정렬|중앙정렬|
 ```
 
-<적용예시>
+- 적용예시
 
 |제목|내용|설명|
 |:---|---:|:---:|
@@ -368,7 +378,7 @@ _Italic_
 |왼쪽에서확장||
 ```
 
-<적용예시>
+- 적용예시
 
 |제목|내용|설명|
 |:---|:---:|---:|
@@ -387,7 +397,7 @@ _Italic_
 |테스트1|<span style="color:red">강조3</span>|테스트3|
 ```
 
-<적용예시>
+- 적용예시
 
 |제목|내용|설명|
 |---|---|---|
@@ -402,7 +412,7 @@ Good!!
 </details>
 ```
 
-<적용예시>
+- 적용예시
 
 <details><summary>Click Me</summary>
 Good!!
