--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -10,45 +10,40 @@ tags:
 toc: true
 toc_sticky: true
  
-date: 2024-01-15
-last_modified_at: 2024-01-15
+date: 2024-01-16
+last_modified_at: 2024-01-16
 ---
 
+# 마크다운 문법정리
 
-# 마크다운 문법 정리
-
-제목
-=============
-
-## 1.1. 헤더
+## 1. 제목
+### 1.1. 헤더
 
 ```
 헤더
 =============
 ```
 
-- 적용예시
+- 헤더 적용예시
 
 헤더
 =============
 
-## 1.2. 작은제목
+### 1.2. 작은제목
 
 ```
 작은제목
 -------------
 ```
 
-- 적용예시
+- 작은제목 적용예시
 
 작은제목
 -------------
 
-## 1.3. 글머리
+### 1.3. 글머리
 
 ```
-1~6 까지만 지원한다.
-
 # 글머리1
 ## 글머리2
 ### 글머리3
@@ -57,10 +52,17 @@ last_modified_at: 2024-01-15
 ###### 글머리6
 ```
 
-2.인용
-=============
+- 글머리 적용예시 (1~6까지만 지원)
 
-## 2.1. 블럭인용문자
+# 글머리1
+## 글머리2
+### 글머리3
+#### 글머리4
+##### 글머리5
+###### 글머리6
+
+## 2. 인용
+### 2.1. 블럭인용문자
 
 ```
 > 첫번째 블럭인용
@@ -68,18 +70,19 @@ last_modified_at: 2024-01-15
 >	>	> 세번째 블럭인용
 ```
 
-- 적용예시
+- 블럭인용문자 적용예시
 
 > 첫번째 블럭인용
 >	> 두번째 블럭인용
 >	>	> 세번째 블럭인용
 
-## 2.2. 각주
+### 2.2. 각주
 
 ```
 각주<sup>[1](#각주 이름)</sup>
 
 <a name="각주 이름">1</a>: 각주에 대한 설명
+
 ```
 
 - 적용예시
@@ -89,30 +92,26 @@ last_modified_at: 2024-01-15
 <a name="각주 이름">1</a>: 각주에 대한 설명
 
 
-3.목록
-=============
-## 3.1. 순서있는 목록(번호)
+## 3. 목록
+
+### 3.1. 순서있는 목록(번호)
 
 ```
-순서는 무조건 번호의 내림차순으로만 작성 가능하다.
-
 1. 첫번째
 2. 세번째
 3. 두번째
 ```
 
-- 적용예시
+- 순서는 무조건 번호의 내림차순으로만 작성 가능함.
 
 1. 첫번째
 2. 세번째
 3. 두번째
 
 
-## 3.2. 순서없는 목록(글머리 기호:*,+,- 지원)
+### 3.2. 순서없는 목록(글머리 기호:*,+,- 지원)
 
 ```
-혼합해서 사용 가능하다.
-
 * 빨강
     * 녹색
         * 파랑
@@ -126,7 +125,7 @@ last_modified_at: 2024-01-15
         - 파랑
 ```
 
-- 적용예시
+- 혼합해서 사용 가능함.
 
 * 빨강
   * 녹색
@@ -141,16 +140,14 @@ last_modified_at: 2024-01-15
     - 파랑
 
 
-4.코드 작성
-=============
-
-## 4.1. 들여쓰기
+## 4. 코드 작성
+### 4.1. 들여쓰기
 4개의 공백 또는 하나의 탭으로 들여쓰기를 만나면 변환되기 시작하여 들여쓰지 않은 행을 만날때까지 변환이 계속된다.
 
-## 4.2. 코드블럭
-코드를 삽입할 땐, 아래 2가지 방식으로 삽입 가능하다.
+### 4.2. 코드블럭
+아래 2가지 방식으로 사용 가능함.
 
-- ```<pre><code>{code}</code></pre>``` 활용
+- ```<pre><code>{code}</code></pre>``` 이용방식
 
 ```
 <pre>
@@ -165,7 +162,7 @@ public class BootSpringBootApplication {
 </pre>
 ```
 
-- 코드블럭코드( ``` ) 활용
+- 코드블럭코드( ``` ) 이용방식
 
 <pre>
 <code>
@@ -179,7 +176,7 @@ public class BootSpringBootApplication {
 </code>
 </pre>
 
-깃헙에서는 코드블럭코드(```) 시작점에 사용하는 언어를 선언하여 문법강조(Syntax highlighting)이 가능하다.
+깃헙에서는 코드블럭코드(```) 시작점에 사용하는 언어를 선언하여 문법강조(Syntax highlighting)이 가능함.
 
 <pre>
 <code>
@@ -191,15 +188,15 @@ int main(){
 </code>
 </pre>
 
-아래처럼 C++ 문법이 강조된다.
+아래처럼 C++ 문법이 강조됨
 ```C++
 int main(){
     cout << "Hello World!";
 }
 ```
 
-## 4.3. 수평선 ```<hr/>```
-아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력 시, 페이지 나누기 용도로 많이 활용된다.
+### 4.3. 수평선 ```<hr/>```
+아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력 시, 페이지 나누기 용도로 많이 활용됨.
 
 ```
 * * *
@@ -226,8 +223,7 @@ int main(){
 
 ---------------------------------------
 
-## 4.4. 링크
-링크는 참조링크, 외부링크, 자동연결 3가지 방식이 있다.
+### 4.4. 링크
 
 - 참조링크
 
@@ -263,11 +259,11 @@ Link: [Google][googlelink]
 
 - 적용예시
 
-외부링크: <http://example.com/>  
+외부링크: <http://example.com/>
 이메일링크: <address@example.com>
 
 
-## 4.5. 강조
+### 4.5. 강조
 
 ```
 *single asterisks*
@@ -278,7 +274,7 @@ __double underscores__
 _Italic_
 ```
 
-- 적용예시
+- 적용예시  
 
 - *single asterisks*
 - _single underscores_
@@ -290,31 +286,31 @@ _Italic_
 ```> 문장 중간에 사용할 경우, **띄어쓰기**를 사용하는 것이 좋다.```
 > 문장 중간에 사용할 경우, **띄어쓰기**를 사용하는 것이 좋다.
 
-## 4.6. 이미지
+### 4.6. 이미지
 
 ```
-![Alt text](주소)
-![Alt text](주소 "Optional title")
+![Alt text](/path/to/img.jpg)
+![Alt text](/path/to/img.jpg "Optional title")
 ```
 
 - 적용예시
 
-![img](https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1 "laura adai Image")
+![Alt text](./img.jpg)
 
 - 사이즈 조절
 
 ```
-<img src="주소" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
-<img src="주소" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
+<img src="./img.jpg" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
+<img src="./img.jpg" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
 ```
 
 - 적용예시
 
-<img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="350px" height="250px" title="px(픽셀) 크기 설정" alt="lauraadai"></img><br/>
-<img src="https://github.com/Gunchukzae/gunchukzae.github.io/assets/156566900/d64b8295-3de0-46b7-9e1e-3f23eec667e1"  width="40%" height="30%" title="px(픽셀) 비율 설정" alt="lauraadai"></img>
+<img src="./img.jpg" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="lauraadai"></img><br/>
+<img src="./img.jpg" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="lauraadai"></img>
 
-## 4.7. 줄바꿈
-엔터키(\n)만으로는 줄바꿈이 되지 않으므로, 문장 마지막에서 2칸 띄어쓰기 후 엔터키를 눌러야 한다.
+### 4.7. 줄바꿈
+엔터키(\n)만으로는 줄바꿈이 되지 않으므로, 문장 마지막에서 2칸 띄어쓰기 후 엔터키를 눌러야함.
 
 ```
 줄바꿈\n (엔터)
@@ -328,9 +324,9 @@ _Italic_
 줄바꿈  
 줄바꿈
 
-## 4.8. 표
-### 4.8.1. 일반적인 표
-테이블 안에 ```|``` 파이프 기호를 사용하려면, 파이프 기호 대신에 ```&#124;```를 입력한다.
+### 4.8. 표
+#### 4.8.1. 일반적인 표
+- 테이블 안에 ```|``` 파이프 기호를 사용하려면 파이프 기호 대신에 ```&#124;```를 입력
 
 ```
 |제목|&#124;내용&#124;|설명|
@@ -348,8 +344,8 @@ _Italic_
 |테스트1|테스트2|테스트3|
 |테스트1|테스트2|테스트3|
 
-### 4.8.2. 셀 정렬
-```:``` 문자로 정렬을 정의한다.
+#### 4.8.2. 셀 정렬
+- ```:``` 문자로 정렬을 정의
 
 ```
 |제목|내용|설명|
@@ -367,8 +363,8 @@ _Italic_
 |왼쪽정렬|오른쪽정렬|중앙정렬|
 |왼쪽정렬|오른쪽정렬|중앙정렬|
 
-### 4.8.3. 셀 확장
-사이가 비어있으면 자동으로 확장된다.
+#### 4.8.3. 셀 확장
+- 사이가 비어있으면 자동으로 확장
 
 ```
 |제목|내용|설명|
@@ -386,8 +382,8 @@ _Italic_
 |||오른쪽에서 확장|
 |왼쪽에서확장||
 
-### 4.8.4. 셀 강조
-일반적인 text와 마찬가지로 ```*``` 와 ```**``` 를 통해 이탤릭/강조를 표시할 수 있다. ```span tag를``` 사용하면 컬러도 표시 가능하다.
+#### 4.8.4. 셀 강조
+- 일반적인 text와 마찬가지로 ```*``` 와 ```**``` 를 통해 이탤릭/강조를 표시할 수 있습니다. ```span tag를``` 사용하면 컬러도 표시 가능
 
 ```
 |제목|내용|설명|
@@ -405,7 +401,7 @@ _Italic_
 |테스트1|**강조2**|테스트3|
 |테스트1|<span style="color:red">강조3</span>|테스트3|
 
-## 4.9. 접기
+### 4.9. 접기
 ```
 <details><summary>Click Me</summary>
 Good!!
