--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -1,6 +1,6 @@
 ---
-title:  "마크다운(Markdown) 문법정리"
-excerpt: "마크다운 문법을 전부 정리해 보자!"
+title:  "[gunchukzae] 마크다운(Markdown) 문법정리"
+excerpt: "마크다운 문법을 전부 정리해 보자!!"
 
 categories:
   - Blog
