--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -1,6 +1,6 @@
 ---
 title:  "[Gunchukzae] 마크다운 문법 정리"
-excerpt: "md 파일에 마크다운 문법으로 작성하여 Github 원격 저장소에 업로드 해보자. 에디터는 Visual Studio code 사용! 로컬 서버에서 확인도 해보자. "
+excerpt: "마크다운 문법을 정리 해보자"
 
 categories:
   - Blog
