--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -409,7 +409,8 @@ Good!!
 </details>
 
 
-## 참고 문서
+5.참고문서
+=============
 
 [ihoneymon : [공통] 마크다운 markdown 작성법](https://gist.github.com/ihoneymon/652be052a0727ad59601)  
 [gparkkii  : 마크다운 markdown 사용법 총정리 - 기본편](https://gparkkii.github.io/tech/markdown/)  
