--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -5,7 +5,7 @@ excerpt: "md 파일에 마크다운 문법을 정리해보자"
 categories:
   - Blog
 tags:
-  - [Blog, jekyll, Github, Git]
+  - [Blog, Github]
 
 toc: true
 toc_sticky: true
