--- a/_posts/2024-01-21-Progr.md
+++ b/_posts/2024-01-21-Progr.md
@@ -2,8 +2,7 @@
 title:  "[By C++] n의 배수"
 excerpt: "n의 배수"
 
-categories:
-  - Programmers
+categories: Programmers
 tags:
   - [CodingTest, Programmers]
 
