--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -2,8 +2,7 @@
 title:  "[Github 블로그] 마크다운 문법 정리"
 excerpt: "md 파일에 마크다운 문법을 정리해보자"
 
-categories:
-  - Blog
+categories: Blog
 tags:
   - [Blog, Github]
 
