--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -1,6 +1,6 @@
 ---
-title:  "[Jekyll] 블로그 포스팅하는 방법"
-excerpt: "md 파일에 마크다운 문법으로 작성하여 Github 원격 저장소에 업로드 해보자. 에디터는 Visual Studio code 사용! 로컬 서버에서 확인도 해보자. "
+title:  "[Github 블로그] 마크다운(Markdown) 문법정리"
+excerpt: "마크다운 문법을 전부 정리해보자. "
 
 categories:
   - Blog
