--- a/_posts/2024-01-16-Markdown.md
+++ b/_posts/2024-01-16-Markdown.md
@@ -3,7 +3,7 @@ title:  "[Github 블로그] 마크다운(Markdown) 문법정리"
 excerpt: "마크다운 문법을 전부 정리해보자. "
 
 categories:
-  - Blog
+  - [Blog]
 tags:
   - [Blog, jekyll, Github, Git]
 
